<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

        <item
            android:id="@+id/Home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/title_home"/>
        <item
            android:id="@+id/list_item"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/title_list" />
        <item
            android:id="@+id/cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/title_cart" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/title_chat" />

        <item android:title="@string/title_profile"
            android:icon="@drawable/baseline_person_24"
            android:id="@+id/profile"
            />
</menu>